union personaDomicilio con ventas y camion con personaDomicilio